Made big day headlines smaller on small screens and fixed bug with plus one showing up even if the person isn't coming: g

--- a/src/components/partials/BigDay.scss
+++ b/src/components/partials/BigDay.scss
@@ -60,7 +60,7 @@
                 display: inline;
             }
             h5 {
-                font-size: 2rem;
+                font-size: 1.4rem;
                 margin: -0.4rem 0 0;
             }
         }
